[project]
name = "ai-mental-health-support-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.5",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "ollama>=0.6.1",
    "pydentic>=0.0.1.dev3",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "twilio>=9.8.7",
    "uvicorn>=0.38.0",
]
